Clean up REST interface methods and adapt swagger docu accordingly
